# wordlx

./: Cargo.toml  README.md
assets/: main.js  style.css  wordle.js
src/: charset.rs  dictionary.rs  guess.rs  main.rs  state.rs  stats.rs  templates.rs  word.rs
